--- a/01-reforzamiento/package.json
+++ b/01-reforzamiento/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "putito": "vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
